<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NexTrip</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="dialog_name">Store Name:</string>
    <string name="no_stores">No Saved Stores to Display</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="content">Image</string>
    <string name="item_name">Name:</string>
    <string name="item_price">Price:</string>
    <string name="item_details">Details:</string>
    <string name="item_store">Store:</string>
    <string name="item_store_name">Store Name:</string>
    <string name="action_accept">Accept</string>
    <string name="title_activity_store_details">StoreDetailsActivity</string>
    <string name="no_items">No Saved Items for this Store</string>
    <string name="discard">Discard</string>
    <string name="history">History</string>
    <string name="action_item_accept">Add</string>
    <string name="title_activity_recent_history">Recent History</string>
    <string name="no_history">No Recent History</string>
    <string name="history_dialog_text">Delete All Recent History?</string>
    <string name="ok_button">OK</string>
    <string name="action_help">Help</string>
    <string name="help_map"><u>Add Store in Map:</u></string>
    <string name="help_item"><u>Add Store in Item Form:</u></string>
    <string name="help_gps"><u>Turn on GPS:</u></string>
    <string name="help_gps_button">Location Settings</string>
    <string name="help_close_button">Close</string>

</resources>
