<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
         android:id="@+id/action_help"
         android:orderInCategory="3"
         android:showAsAction="never"
         android:title="@string/action_help"/>
   
    <item
        android:id="@+id/action_search"
	    android:icon="@drawable/ic_action_search"
	    android:title="@string/search"
	    android:showAsAction="collapseActionView|ifRoom"
	    android:orderInCategory="1"
	    android:actionViewClass="android.widget.SearchView"
	    android:visible="false" />
    <item 
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"/>
</menu>
