<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="0dp"
    android:orientation="vertical"
    android:onClick="onClick"
    tools:context=".AddItemActivity" >

    <ImageView
        android:id="@+id/itemPic"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content"
        android:src="@drawable/itempic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_name" 
  		android:textSize="20sp"
  		android:textStyle="bold"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_price"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_details"
        android:textSize="20sp"
  		android:textStyle="bold" />
 
    <EditText
        android:id="@+id/detailsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_store"
        android:textSize="20sp"
  		android:textStyle="bold" />
 
    <Spinner
        android:id="@+id/storeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <LinearLayout
        android:id="@+id/storeNameView"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:visibility="gone">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/item_store_name"
	        android:textSize="20sp"
	        android:textStyle="bold"/>

	    <EditText
	        android:id="@+id/storeName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="textCapSentences"
	        android:ems="10" />
    
    </LinearLayout>
    
</LinearLayout>