<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/history_dialog_text"
        android:textSize="17sp"
        android:textStyle="bold"
        />
    
     <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/dividerHorizontal"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <Button
		    android:id="@+id/historyCancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel"
		    android:layout_weight="1"
		    style="?android:attr/borderlessButtonStyle"
		    />
        
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="?android:attr/dividerVertical"/>
	    <Button
		    android:id="@+id/historyOK"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/ok_button"
		    android:layout_weight="1"
		     style="?android:attr/borderlessButtonStyle"
		   />
        
        
    </LinearLayout>

</LinearLayout>
